- Fixing bug with contact form on mobile not showing success dialogue box
 - Changing CSS styles for success panels

--- a/app/scss/partials/_panels.scss
+++ b/app/scss/partials/_panels.scss
@@ -31,7 +31,8 @@
     @extend %position--absolute; 
     @include single-transition(all, 0.4s, ease-in-out); 
 
-    .panel-body {
+    .panel-body,
+    .panel-title {
         color: #fff; 
     }
 
